fix(menu): ensure menu items do not wrap (fix #87)

--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -25,6 +25,7 @@
     position: absolute;
     z-index: var(--bl-menu-zindex);
     display: none;
+    white-space: nowrap;
 
     transition-duration: var(--bl-transition-md);
     transition-timing-function: ease-out;
